--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Blue Lock Screen</title>
   <style>
     body, html {
       margin: 0;
       padding: 0;
       height: 100%;
-      font-family: Arial;
+      font-family: Arial, sans-serif;
     }
 
     #lockScreen {
       display: none;
       background-color: blue;
-      height: 100%;
-      width: 100%;
+      height: 100vh;
+      width: 100vw;
       position: fixed;
       top: 0;
       left: 0;
       color: white;
-      text-align: center;
+      z-index: 9999;
+      display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
     }
 
     input[type="password"] {
-      font-size: 20px;
+      font-size: 22px;
       padding: 10px;
       margin-top: 20px;
       border: none;
@@ -34,4 +37,32 @@
     }
 
     button {
-      font
+      font-size: 18px;
+      padding: 10px 20px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+
+    #message {
+      margin-top: 10px;
+      font-size: 16px;
+      color: yellow;
+    }
+  </style>
+</head>
+<body>
+
+  <h1 style="text-align:center; padding-top: 50px;">Click to Lock Screen</h1>
+  <div style="text-align:center;">
+    <button onclick="activateLock()">Activate Lock</button>
+  </div>
+
+  <div id="lockScreen">
+    <h2>🔒 Enter Password to Unlock</h2>
+    <input type="password" id="passwordInput" placeholder="Enter password" />
+    <button onclick="checkPassword()">Unlock</button>
+    <div id="message"></div>
+  </div>
+
+  <script>
+    function activate
