--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Blue Lock Screen</title>
+  <title>Lock Screen Page</title>
   <style>
     body, html {
       margin: 0;
@@ -52,17 +52,4 @@
 </head>
 <body>
 
-  <h1 style="text-align:center; padding-top: 50px;">Click to Lock Screen</h1>
-  <div style="text-align:center;">
-    <button onclick="activateLock()">Activate Lock</button>
-  </div>
-
-  <div id="lockScreen">
-    <h2>🔒 Enter Password to Unlock</h2>
-    <input type="password" id="passwordInput" placeholder="Enter password" />
-    <button onclick="checkPassword()">Unlock</button>
-    <div id="message"></div>
-  </div>
-
-  <script>
-    function activate
+  <h1 style="text-align:center; padding-top:
