--- a/index.html
+++ b/index.html
@@ -2,54 +2,84 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Lock Screen Page</title>
+  <title>Windows Update</title>
   <style>
-    body, html {
+    html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      font-family: Arial, sans-serif;
-    }
-
-    #lockScreen {
-      display: none;
-      background-color: blue;
+      background-color: #0078d7; /* Windows blue */
       height: 100vh;
       width: 100vw;
-      position: fixed;
-      top: 0;
-      left: 0;
       color: white;
-      z-index: 9999;
+      font-family: Segoe UI, sans-serif;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
     }
 
-    input[type="password"] {
-      font-size: 22px;
-      padding: 10px;
-      margin-top: 20px;
-      border: none;
-      border-radius: 5px;
+    img {
+      width: 120px;
+      margin-bottom: 40px;
     }
 
-    button {
-      font-size: 18px;
-      padding: 10px 20px;
-      cursor: pointer;
-      margin-top: 20px;
+    .updating-text {
+      font-size: 24px;
+      margin-bottom: 30px;
     }
 
-    #message {
+    .progress {
+      width: 300px;
+      height: 20px;
+      background-color: rgba(255,255,255,0.2);
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    .bar {
+      height: 100%;
+      width: 0%;
+      background-color: white;
+      transition: width 1s ease-in-out;
+    }
+
+    .percent-text {
       margin-top: 10px;
-      font-size: 16px;
-      color: yellow;
+      font-size: 18px;
     }
   </style>
 </head>
 <body>
 
-  <h1 style="text-align:center; padding-top:
+  <!-- Microsoft Logo -->
+  <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Microsoft Logo" />
+
+  <!-- Updating Text -->
+  <div class="updating-text">Working on updates<br>Don't turn off your PC. This will take a while.</div>
+
+  <!-- Progress Bar -->
+  <div class="progress">
+    <div class="bar" id="progress-bar"></div>
+  </div>
+  <div class="percent-text" id="percent-text">0% complete</div>
+
+  <script>
+    let percent = 0;
+    const bar = document.getElementById("progress-bar");
+    const percentText = document.getElementById("percent-text");
+
+    function updateProgress() {
+      if (percent < 100) {
+        percent += 10;
+        bar.style.width = percent + "%";
+        percentText.textContent = percent + "% complete";
+      }
+    }
+
+    // हर घंटे 10% बढ़ेगा
+    updateProgress(); // स्टार्ट में 10%
+    setInterval(updateProgress, 3600000); // हर घंटे
+  </script>
+
+</body>
+</html>
