--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     .progress {
       width: 300px;
-      height: 20px;
+      height: 10px; /* पतली लाइन */
       background-color: rgba(255,255,255,0.2);
-      border-radius: 10px;
+      border-radius: 5px;
       overflow: hidden;
       margin-top: 20px;
     }
@@ -48,11 +48,11 @@
     }
 
     .spinner {
-      border: 6px solid rgba(255, 255, 255, 0.2);
-      border-top: 6px solid white;
+      border: 4px solid rgba(255, 255, 255, 0.2);
+      border-top: 4px solid white;
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      width: 30px;
+      height: 30px;
       animation: spin 1s linear infinite;
       margin-top: 40px;
     }
@@ -61,7 +61,6 @@
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
-
   </style>
 </head>
 <body>
@@ -72,10 +71,8 @@
     Do not turn off or unplug your computer.
   </div>
 
-  <!-- Spinner -->
   <div class="spinner"></div>
 
-  <!-- Progress Bar -->
   <div class="progress">
     <div class="bar" id="progress-bar"></div>
   </div>
@@ -107,11 +104,11 @@
       }
     }
 
-    // Start with 10% immediately
+    // Start immediately
     updateProgress();
 
-    // Update every hour (3600000 ms), but for demo/testing use smaller time (e.g., 10 sec)
-    setInterval(updateProgress, 3600000); // Change to 10000 (10s) if you want fast test
+    // Update every 10 seconds (testing mode)
+    setInterval(updateProgress, 10000);
   </script>
 
 </body>
